# speculum

./: .gitignore  Cargo.toml  LICENSE
data/: speculum.service  speculum.timer
src/: cli.rs  data_model.rs  lib.rs  main.rs  mirror.rs  mirrors.rs  mod.rs  reflector.rs  speculum.rs
src/speculum/: mirror.rs  mirrors.rs  protocols.rs
tests/: api.rs
